simplify demo step&REAMME and fix some spell issue
